force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>This is the amount requested from the limited partner to pay.</description>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>