force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/Amount_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received_Date__c</fullName>
    <description>The date on which the amount is received from the limited partner.</description>
    <label>Amount Received Date</label>
    <type>Date</type>
</CustomField>