force-app/main/default/objects/FinServ__FinancialAccountTransaction__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>The stages that need to be gone through to receive money from the limited partner.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contacted LP</fullName>
            </value>
            <value>
                <fullName>Capital Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>